# DjangoCareerNavigator

./: .dockerignore  .env.sample  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
api/candidate/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
api/job/: admin.py  models.py  serializers.py  urls.py  views.py
api/matching/: apps.py  urls.py  utils.py  views.py
api/recruiter/: apps.py  models.py  serializers.py  urls.py  views.py
config/: app_config.py  permissions.py  settings.py  urls.py
tests/: conftest.py
tests/auth/: test_authentication.py
